# quickload

./: Cargo.toml  README.md  rust-toolchain.toml
.github/actions/plan/: plan.js
.github/scripts/build_env/: macos.sh
.github/workflows/: code.yml
crates/checksum/: Cargo.toml
crates/checksum/src/: lib.rs
crates/chunk-picker/: Cargo.toml
crates/chunk-picker/src/: lib.rs  linear.rs
crates/chunker/: Cargo.toml
crates/chunker/src/: lib.rs  traits.rs  utils.rs
crates/disk-space-allocation/: Cargo.toml
crates/disk-space-allocation/src/: fallback.rs  lib.rs  unix.rs  windows.rs
crates/linear-chunk-picker/: Cargo.toml
crates/linear-chunk-picker/src/: lib.rs  traits.rs
crates/loader/: Cargo.toml
crates/loader/src/: chunk_validator.rs  http_partial_loader.rs  lib.rs  progress.rs  resume.rs  utils.rs
crates/progress-state/: Cargo.toml
crates/progress-state-reporter/: Cargo.toml
crates/progress-state-reporter/src/: lib.rs
crates/progress-state/src/: lib.rs
crates/quickload/: Cargo.toml
crates/quickload/examples/: quickload.rs
crates/quickload/src/: chunk_picker.rs  lib.rs  loader.rs
crates/quickload/src/disk_space_allocation/: windows.rs
examples/: quickload.rs
src/: chunk.rs  chunk_picker.rs  disk_space_allocation.rs  lib.rs  loader.rs
src/disk_space_allocation/: fallback.rs  unix.rs  windows.rs
