[package]
name = "quickload"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
hyper = "0.13"
positioned-io = "0.2"
tokio = { version = "0.2", features = ["sync"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["sync", "macros"] }
hyper-tls = "0.4"
pretty_assertions = "0.6"
