[package]
name = "quickload"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
hyper = "0.13"
positioned-io-preview = "0.3"
tokio = { version = "0.2", features = ["sync", "blocking", "rt-threaded"] }
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
nix = "0.18"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "processthreadsapi", "impl-default"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["sync", "macros"] }
hyper-tls = "0.4"
pretty_assertions = "0.6"
