[package]
name = "quickload"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
cfg-if = "1"
futures-util = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
positioned-io-preview = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
nix = { version = "0.26", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "processthreadsapi", "impl-default"] }

[dev-dependencies]
hyper-tls = "0.5"
pretty_assertions = "1.3"
tokio = { version = "1", features = ["macros"] }
