[package]
name = "quickload-disk-space-allocation"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"

[dependencies]
cfg-if = "1"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios"))))'.dependencies]
nix = { version = "0.26", default-features = false, features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "fileapi",
  "impl-default",
  "processthreadsapi",
  "securitybaseapi",
  "winnt",
] }
