[package]
name = "quickload-loader"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"

[dependencies]
quickload-chunker = { path = "../chunker" }
quickload-disk-space-allocation = { path = "../disk-space-allocation" }
quickload-linear-chunk-picker = { path = "../linear-chunk-picker" }

anyhow = "1.0"
futures-util = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
positioned-io-preview = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
