[package]
name = "quickload"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"

[dependencies]

[dev-dependencies]
quickload-chunker = { path = "../chunker" }
quickload-disk-space-allocation = { path = "../disk-space-allocation" }
quickload-loader = { path = "../loader" }

anyhow = "1.0"
hyper = "0.14"
hyper-tls = "0.5"
tokio = { version = "1", features = ["macros", "signal"] }
